--- a/newhome.html
+++ b/newhome.html
@@ -124,7 +124,7 @@
         signOut(auth)
           .then(() => {
             alert("You are successfully signed out!");
-            location.replace("Homepage.html");
+            location.replace("index.html");
           })
           .catch((error) => {
             console.log("An error occurred.");
